--- a/src/WorkflowEngine.Sdk.Persistence.Memory/WorkflowEngine.Sdk.Persistence.Memory.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Memory/WorkflowEngine.Sdk.Persistence.Memory.csproj
@@ -29,7 +29,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Memory</PackageId>
-    <Version>2.0.3</Version>
+    <Version>2.1.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -39,6 +39,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.1.1 Added AcivityInstanceId to WorkflowSemaphoreQueueRecord
       2.0.3 Bump
       2.0.0 Refactored Semaphores. Not backwards compatible
       1.6.0 Added HashTable
