--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.18.2" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.2" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.10.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.3.0" />
@@ -73,6 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.14.3 Bump
       6.14.2 Now throws FulcrumResourceLockedException instead of FulcrumTryAgainException
       6.14.1 Made WorkflowVersionCollection class internal. The reroute to AM part of the code is now more obvious
       6.14.0 Added WorkflowImplementation.SetDebugMode()
