--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -36,7 +36,7 @@
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.2" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.10.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.3.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.4.0-alpha04" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.0.2" />
   </ItemGroup>
 
