--- a/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
+++ b/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
@@ -32,7 +32,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.10.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.3.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.4.0-alpha04" />
   </ItemGroup>
 
   
