--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -47,7 +47,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>2.3.0</Version>
+    <Version>2.4.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -57,7 +57,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      2.3.1 Bump
+      2.4.0 Added an index for Log.TimeStamp
       2.3.0 Added AbsolutePosition to ActivityInstanceRecord
       2.2.1 Added ParentActivityInstanceId to WorkflowSemaphoreQueueRecord
       2.1.0 Added patch for stored procedures (delete workflow version, delete workflow form)
@@ -138,6 +138,8 @@
     <None Remove="contentFiles\any\any\sql-scripts\patches\patch12_rollback.sql" />
     <None Remove="contentFiles\any\any\sql-scripts\patches\patch13 - absolute position.sql" />
     <None Remove="contentFiles\any\any\sql-scripts\patches\patch13_rollback.sql" />
+    <None Remove="contentFiles\any\any\sql-scripts\patches\patch14 - log timestamp index.sql" />
+    <None Remove="contentFiles\any\any\sql-scripts\patches\patch14_rollback.sql" />
   </ItemGroup>
 
 </Project>
