--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.14.2</Version>
+    <Version>6.15.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,6 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.15.0 Introduced activity for try-catch. Activity type Sleep now accepts DateTimeOffset. Moved some parts of ActivityExecutor into LogicExecutor
       6.14.3 Bump
       6.14.2 Now throws FulcrumResourceLockedException instead of FulcrumTryAgainException
       6.14.1 Made WorkflowVersionCollection class internal. The reroute to AM part of the code is now more obvious
