--- a/src/WorkflowEngine.Sdk.Persistence.Memory/WorkflowEngine.Sdk.Persistence.Memory.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Memory/WorkflowEngine.Sdk.Persistence.Memory.csproj
@@ -20,7 +20,7 @@
 
   <!-- Publish symbols -->
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
   </ItemGroup>
   <ItemGroup>
@@ -29,7 +29,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Memory</PackageId>
-    <Version>2.1.1</Version>
+    <Version>2.1.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -39,6 +39,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.1.2 Bump
       2.1.1 Added AcivityInstanceId to WorkflowSemaphoreQueueRecord
       2.0.3 Bump
       2.0.0 Refactored Semaphores. Not backwards compatible
