--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -18,10 +18,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.18.2" />
+    <PackageReference Include="Nexus.Link.Contracts.Misc.AspNet.Sdk" Version="1.0.8" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.19.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.2.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.2.7" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net461'">
