--- a/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
+++ b/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
@@ -24,7 +24,7 @@
 		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
 		<PackageReference Include="IdentityModel" Version="5.1.0" />
-		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.19.0" />
+		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.20.0-alpha01" />
 	</ItemGroup>
 
 	<PropertyGroup>
