--- a/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
+++ b/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.2.7" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.20.0-alpha01" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.20.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
