--- a/src/Services.Contracts/Services.Contracts.csproj
+++ b/src/Services.Contracts/Services.Contracts.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.20.0-alpha01" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.20.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.2" />
   </ItemGroup>
 
