--- a/test/Authentication.Sdk.UnitTests/Authentication.Sdk.UnitTests.csproj
+++ b/test/Authentication.Sdk.UnitTests/Authentication.Sdk.UnitTests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.20.0-alpha01" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.20.0" />
   </ItemGroup>
 
   <ItemGroup>
