--- a/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.10.1" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.4.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.0-alpha02" />
     <PackageReference Include="Nexus.Link.Contracts.Misc.Sdk" Version="1.0.6" />
   </ItemGroup>
 
