--- a/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
+++ b/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
@@ -37,15 +37,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="3.1.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.18.2" />
+    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="3.2.1-alfa01" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.19.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.1" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncManager.Sdk</PackageId>
-    <Version>3.2.5</Version>
+    <Version>3.2.6-alfa04</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -55,6 +55,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.2.6 Move serialization extensions to the contract library
       3.2.5 Bump
       3.2.0 UpdateRequestAuthenticationAsync
       3.1.1 Changed URL path to /Retry instead of /Ready
