--- a/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
+++ b/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
@@ -32,7 +32,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.10.1" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.1-alpha01" />
   </ItemGroup>
 
   
