--- a/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
+++ b/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
@@ -38,7 +38,7 @@
   <!-- Publish symbols -->
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="3.2.1-alfa01" />
+    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="3.2.1" />
     <PackageReference Include="Nexus.Link.Contracts.Misc.AspNet.Sdk" Version="1.0.8" />
     <PackageReference Include="Nexus.Link.Contracts.Misc.Sdk" Version="1.1.0-alfa01" />
   </ItemGroup>
