--- a/test/Capabilities.WorkflowState.UnitTests/Capabilities.WorkflowState.UnitTests.csproj
+++ b/test/Capabilities.WorkflowState.UnitTests/Capabilities.WorkflowState.UnitTests.csproj
@@ -35,7 +35,7 @@
   
   <PropertyGroup>
     <PackageId>Nexus.Link.Capabilities.WorkflowState.UnitTests</PackageId>
-    <Version>2.0.1</Version>
+    <Version>2.0.2-alfa01</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
