Crude implementation (needs revision)

--- a/test/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests.csproj
+++ b/test/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests.csproj
@@ -9,8 +9,9 @@
   <!-- Nugets for the test framework -->
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.10.1" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.1" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.0-alpha01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.3-alpha06" />
+    <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.1.0-alpha08" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
   </ItemGroup>
@@ -22,6 +23,11 @@
 
   <ItemGroup>
         <ProjectReference Include="..\..\src\WorkflowEngine.Sdk.Persistence.Abstract\WorkflowEngine.Sdk.Persistence.Abstract.csproj" />
+        <ProjectReference Include="..\..\src\WorkflowEngine.Sdk\WorkflowEngine.Sdk.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mgmt\" />
   </ItemGroup>
 
 </Project>
