--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,4 @@ ASALocalRun/
 /Nexus.Link.Workflow.SDK.sln.DotSettings
 /src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.xml
 /src/Misc.Web.Sdk/Misc.Web.Sdk.xml
+/src/AspNet.Sdk/AspNet.Sdk.xml
