--- a/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
+++ b/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
@@ -28,9 +28,9 @@
     </PackageReference>
     <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.3" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.1" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.4" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.6.0-alpha02" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.1.5" />
   </ItemGroup>
 
