--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -47,7 +47,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>2.6.1</Version>
+    <Version>2.7.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -57,6 +57,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.7.0 Added ActivityInstance.IterationTitle
       2.6.1 WorkflowInstanceSearchDetails.States
       2.6.0 Forms ReadByIntervalWithPagingAsync
       2.5.0 Support for searching/browsing instances, versions and forms
@@ -67,13 +68,13 @@
       2.1.0 Added patch for stored procedures (delete workflow version, delete workflow form)
       2.0.4 Bump
       2.0.3 Corrected order of dropping tables in patch 10 rollback
-      2.0.1 Bump 
+      2.0.1 Bump
       3.2.0 Added
       2.2.1 Added ParentActivityInstanceId to WorkflowSemaphoreQueueRecord
       2.1.0 Added patch for stored procedures (delete workflow version, delete workflow form)
       2.0.4 Bump
       2.0.3 Corrected order of dropping tables in patch 10 rollback
-      2.0.1 Bump 
+      2.0.1 Bump
       2.0.0 Refactored Semaphores. Not backwards compatible
       1.9.0 Added HashTable
       1.8.1 Bump
