--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -18,8 +18,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.25.1" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0-alfa04" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
@@ -38,7 +38,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Configurations.Sdk</PackageId>
-      <Version>2.2.13</Version>
+      <Version>2.2.14</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -48,7 +48,7 @@
       <Copyright>Copyright ©2020 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
-        2.2.13 Bump
+        2.2.14 Bump
         2.2.4 Symbols
         2.2.3 Bump
         2.2.0 Added Tenant to ILeverConfiguration.
