--- a/test/Authentication.Sdk.UnitTests/Authentication.Sdk.UnitTests.csproj
+++ b/test/Authentication.Sdk.UnitTests/Authentication.Sdk.UnitTests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="Shouldly" Version="4.1.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.25.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" />
   </ItemGroup>
 
   <ItemGroup>
