--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -19,10 +19,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     <PackageReference Include="Nexus.Link.Contracts.Misc.AspNet.Sdk" Version="1.0.8" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0-alfa04" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.3.0-alfa03" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net461'">
