--- a/src/Authentication.Sdk/Authentication.Sdk.csproj
+++ b/src/Authentication.Sdk/Authentication.Sdk.csproj
@@ -22,8 +22,8 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.2" />
     <PackageReference Include="Nexus.Link.Contracts.Misc.Sdk" Version="1.0.6" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0-alfa04" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
