--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -18,8 +18,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0-alfa04" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
