--- a/src/Dashboards.Sdk/Dashboards.Sdk.csproj
+++ b/src/Dashboards.Sdk/Dashboards.Sdk.csproj
@@ -24,10 +24,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" />
+		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
 		<PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.12.0" />
 		<PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.1" />
-		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0-alfa04" />
+		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0" />
 		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.4" />
 	</ItemGroup>
 
