--- a/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
+++ b/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0-alfa04" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0" />
   </ItemGroup>
 
   <PropertyGroup>
