--- a/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
+++ b/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
@@ -21,10 +21,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
-		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0-alfa04" />
+		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
 		<PackageReference Include="IdentityModel" Version="5.1.0" />
-		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" />
+		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
 	</ItemGroup>
 
 	<PropertyGroup>
