--- a/src/Services.Contracts/Services.Contracts.csproj
+++ b/src/Services.Contracts/Services.Contracts.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.1" />
   </ItemGroup>
 
