--- a/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
+++ b/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.18.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0-alfa02" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
   </ItemGroup>
 
   <ItemGroup>
