--- a/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
+++ b/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
@@ -37,15 +37,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="3.2.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="3.2.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.1" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncManager.Sdk</PackageId>
-    <Version>3.2.8</Version>
+    <Version>3.2.9</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -55,24 +55,25 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.2.9 Updated nugets to avoid versions with security risks
       3.2.8 Bump
       3.2.0 UpdateRequestAuthenticationAsync
       3.1.1 Changed URL path to /Retry instead of /Ready
       3.1.0 UpdateRequestAuthenticationAsync
-			3.0.3 Corrected the URL path for the REST client for IRequestService.RetryAsync
-			3.0.2 Bump
-			3.0.0 New breaking contract
-			2.0.1 Bump
-			2.0.0 Contracts in new repo
-			1.4.2 Bump
-			1.4.0 Added extensions
-			1.3.1 Bump
-			1.3.0 Moved AspNet code to separate library
-			1.2.0 IExecutionService, IExecutionResponseService; don't use Tenant in rest clients
-			1.1.1 Support for setting up rest clients with your own tenant
-			1.1.0 Refactored AsyncRequestClient. Now accepts RequestPostponedException.
-			1.0.2 First release
-		</PackageReleaseNotes>
+      3.0.3 Corrected the URL path for the REST client for IRequestService.RetryAsync
+      3.0.2 Bump
+      3.0.0 New breaking contract
+      2.0.1 Bump
+      2.0.0 Contracts in new repo
+      1.4.2 Bump
+      1.4.0 Added extensions
+      1.3.1 Bump
+      1.3.0 Moved AspNet code to separate library
+      1.2.0 IExecutionService, IExecutionResponseService; don't use Tenant in rest clients
+      1.1.1 Support for setting up rest clients with your own tenant
+      1.1.0 Refactored AsyncRequestClient. Now accepts RequestPostponedException.
+      1.0.2 First release
+    </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 </Project>
