--- a/src/Services.Controllers/Services.Controllers.csproj
+++ b/src/Services.Controllers/Services.Controllers.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Nexus.Link.Services.Controllers</RootNamespace>
     <AssemblyName>Nexus.Link.Services.Controllers</AssemblyName>
 
@@ -18,8 +18,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.3.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.AspNet" Version="2.7.7" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.4.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.AspNet" Version="2.7.8" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,7 +28,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Controllers</PackageId>
-    <Version>2.4.13</Version>
+    <Version>2.4.14</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -38,6 +38,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.4.14 Updated nugets to avoid versions with security risks
       2.4.13 Bump
       2.4.4 Symbols
       2.4.3 Bump
