--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.DatabasePatcher" Version="2.6.1" />
-    <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.15.4" />
+    <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.15.8" />
   </ItemGroup>
 
   <ItemGroup>
@@ -47,7 +47,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>2.6.2</Version>
+    <Version>2.6.3</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -57,6 +57,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.6.3 Updated nugets to avoid versions with security risks
       2.6.2 Bump
       2.6.1 WorkflowInstanceSearchDetails.States
       2.6.0 Forms ReadByIntervalWithPagingAsync
@@ -68,13 +69,13 @@
       2.1.0 Added patch for stored procedures (delete workflow version, delete workflow form)
       2.0.4 Bump
       2.0.3 Corrected order of dropping tables in patch 10 rollback
-      2.0.1 Bump 
+      2.0.1 Bump
       3.2.0 Added
       2.2.1 Added ParentActivityInstanceId to WorkflowSemaphoreQueueRecord
       2.1.0 Added patch for stored procedures (delete workflow version, delete workflow form)
       2.0.4 Bump
       2.0.3 Corrected order of dropping tables in patch 10 rollback
-      2.0.1 Bump 
+      2.0.1 Bump
       2.0.0 Refactored Semaphores. Not backwards compatible
       1.9.0 Added HashTable
       1.8.1 Bump
