--- a/test/AsyncCaller.UnitTests/AsyncCaller.Sdk.UnitTests.csproj
+++ b/test/AsyncCaller.UnitTests/AsyncCaller.Sdk.UnitTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net461;net472</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net461;net472</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -11,7 +11,7 @@
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.1" />
   </ItemGroup>
 
   <ItemGroup>
