--- a/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
+++ b/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.1" />
   </ItemGroup>
 
@@ -36,7 +36,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.UnitTest</PackageId>
-    <Version>1.2.37</Version>
+    <Version>1.2.38</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -46,6 +46,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+	  1.2.38 Bump
       1.2.37 Updated nugets to avoid versions with security risks
       1.2.36 Bump
       1.2.11 Added missing activity types to switch statement
